--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -283,7 +283,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>siteSettings</artifactId>
-            <version>8.7.0</version>
+            <version>8.8.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
