--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -115,7 +115,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>event</artifactId>
-            <version>3.2.0</version>
+            <version>4.0.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
