--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -44,7 +44,7 @@
 
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    
+
     <parent>
         <groupId>org.jahia.packages</groupId>
         <artifactId>jahia-packages-parent</artifactId>
@@ -55,11 +55,11 @@
     <artifactId>jahia-core-modules</artifactId>
     <name>Jahia Core Modules Package</name>
     <packaging>pom</packaging>
-    
+
     <properties>
         <package.sources.skip>true</package.sources.skip>
     </properties>
-    
+
     <repositories>
         <repository>
             <id>jahia-public</id>
@@ -74,7 +74,7 @@
             </snapshots>
         </repository>
     </repositories>
-    
+
     <dependencies>
         <dependency>
             <groupId>org.jahia.modules</groupId>
@@ -371,6 +371,11 @@
             <artifactId>personal-api-tokens</artifactId>
             <version>1.4.0</version>
             <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jahia.modules</groupId>
+            <artifactId>server-availability-manager</artifactId>
+            <version>2.6.0</version>
         </dependency>
     </dependencies>
 </project>
