--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -109,7 +109,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>jahia-user-entries</artifactId>
-            <version>1.5.0</version>
+            <version>1.6.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
