--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -103,7 +103,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>dx-base-demo-components</artifactId>
-            <version>2.4.0</version>
+            <version>2.5.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
