--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -271,7 +271,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>serverSettings</artifactId>
-            <version>9.7.0</version>
+            <version>9.8.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
