--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -210,7 +210,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>grid</artifactId>
-            <version>8.0.0</version>
+            <version>8.1.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
