--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -163,7 +163,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>rating</artifactId>
-            <version>3.2.0</version>
+            <version>3.3.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
