--- a/.github/workflows/do-it-all.yml
+++ b/.github/workflows/do-it-all.yml
@@ -302,7 +302,8 @@ jobs:
           tests_path: jahia-pack-repo/docker-tests/
           jahia_image: ${{ env.JAHIA_IMAGE }}
           should_use_build_artifacts: true
-          should_skip_testrail: true
+          should_skip_notifications: false
+          should_skip_testrail: false
           github_artifact_name: jahia-integ-tests-${{ github.run_number }}
           jahia_license: ${{ secrets.JAHIA_LICENSE_8X_FULL }}
           docker_username: ${{ secrets.DOCKERHUB_USERNAME }}
@@ -312,6 +313,7 @@ jobs:
           tests_report_name: Test report (Standalone)
           testrail_username: ${{ secrets.TESTRAIL_USERNAME }}
           testrail_password: ${{ secrets.TESTRAIL_PASSWORD }}
+          incident_service: jahia-pack-private
           incident_pagerduty_api_key: ${{ secrets.INCIDENT_PAGERDUTY_API_KEY }}
           incident_pagerduty_reporter_email: ${{ secrets.INCIDENT_PAGERDUTY_REPORTER_EMAIL }}
           incident_pagerduty_reporter_id: ${{ secrets.INCIDENT_PAGERDUTY_REPORTER_ID }}
