--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -116,7 +116,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>jahia-page-composer</artifactId>
-            <version>1.11.0-SNAPSHOT</version>
+            <version>1.11.0</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -146,7 +146,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>jcontent</artifactId>
-            <version>2.13.0-SNAPSHOT</version>
+            <version>2.13.0</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
