--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -316,7 +316,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>templates-system</artifactId>
-            <version>9.0.0</version>
+            <version>9.1.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
