--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -358,7 +358,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>ldap</artifactId>
-            <version>4.6.0</version>
+            <version>4.7.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
