--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -86,7 +86,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>ckeditor</artifactId>
-            <version>4.21.0-jahia8-6</version>
+            <version>4.21.0-jahia8-7-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -224,7 +224,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>jquery</artifactId>
-            <version>8.1.0</version>
+            <version>8.2.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
