--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -191,6 +191,18 @@
             <version>4.2.1</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>org.jahia.modules</groupId>
+            <artifactId>default-skins</artifactId>
+            <version>8.2.0-SNAPSHOT</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jahia.modules</groupId>
+            <artifactId>skins</artifactId>
+            <version>8.0.0</version>
+            <scope>runtime</scope>
+        </dependency>
         <!-- end of Jahia Forge Modules -->
 
         <!-- Templates sets -->
