--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -366,5 +366,10 @@
             <artifactId>server-availability-manager</artifactId>
             <version>3.1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.jahia.modules</groupId>
+            <artifactId>npm-modules-engine</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
