--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -328,7 +328,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>userDashboard</artifactId>
-            <version>8.5.0</version>
+            <version>8.6.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
