--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -76,5 +76,11 @@
     </repositories>
 
     <dependencies>
+        <dependency>
+            <groupId>org.jahia.modules</groupId>
+            <artifactId>richtext-ckeditor5</artifactId>
+            <version>0.1.0-SNAPSHOT</version>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
 </project>
