--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -82,5 +82,17 @@
             <version>0.1.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>org.jahia.modules</groupId>
+            <artifactId>default-skins</artifactId>
+            <version>8.2.0-SNAPSHOT</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jahia.modules</groupId>
+            <artifactId>skins</artifactId>
+            <version>8.0.0</version>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
 </project>
