--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -52,6 +52,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>jahia-additional-modules</artifactId>
+  <version>8.2.0.1-SNAPSHOT</version>
     <name>Jahia Additional Modules Package</name>
     <packaging>pom</packaging>
 
@@ -93,4 +94,8 @@
             <version>0.1.0</version>
         </dependency>
     </dependencies>
+
+  <scm>
+    <tag>JAHIA-8-2-0-X-BRANCH</tag>
+  </scm>
 </project>
