--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -53,6 +53,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>jahia-core-modules</artifactId>
+  <version>8.2.0.1-SNAPSHOT</version>
     <name>Jahia Core Modules Package</name>
     <packaging>pom</packaging>
 
@@ -352,4 +353,8 @@
             <version>1.0.0</version>
         </dependency>
     </dependencies>
+
+  <scm>
+    <tag>JAHIA-8-2-0-X-BRANCH</tag>
+  </scm>
 </project>
