--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -224,7 +224,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>module-manager</artifactId>
-            <version>2.9.0</version>
+            <version>2.9.1-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -345,7 +345,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>npm-modules-engine</artifactId>
-            <version>0.1.0</version>
+            <version>0.2.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
