--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -224,7 +224,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>module-manager</artifactId>
-            <version>2.9.1-SNAPSHOT</version>
+            <version>2.9.1</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
