--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -217,7 +217,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>graphql-dxm-provider</artifactId>
-            <version>2.20.0-SNAPSHOT</version>
+            <version>2.20.0</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
