--- a/.github/workflows/do-it-all.yml
+++ b/.github/workflows/do-it-all.yml
@@ -74,19 +74,19 @@ jobs:
       current_branch: ${{ steps.tags.outputs.current_branch }}
       triggered_by: ${{ steps.tags.outputs.triggered_by }}
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           ref: ${{ needs.vars.outputs.target_branch }}
           repository: Jahia/jahia-pack-private
           path: jahia-pack-repo
           token: ${{ secrets.GH_API_TOKEN }}
-      - uses: actions/cache@v3
+      - uses: actions/cache@v4
         with:
           path: ~/.m2
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
       # Artifacts are saved via the cache mechanism to save time
       - name: Save/Restore build artifacts from cache
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           key: run-${{ github.run_id }}
           path: |
@@ -246,7 +246,7 @@ jobs:
     needs: build
     steps:
       - name: Save/Restore build artifacts from cache
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           key: run-${{ github.run_id }}
           path: |
@@ -254,9 +254,9 @@ jobs:
             ${{ github.workspace }}/jahia-pack-repo/artifacts/*
             jahia-pack-repo/image.tar
             jahia-pack-repo/image.tag
-      - uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v4
         with:
-          name: jahia-docker-artifacts
+          name: jahia-pack-docker-artifacts
           retention-days: 1
           path: |
             jahia-pack-repo/image.tar
@@ -272,18 +272,18 @@ jobs:
       - uses: KengoTODA/actions-setup-docker-compose@main
         with:
           version: '1.29.2'
-      - uses: actions/setup-node@v3
+      - uses: actions/setup-node@v4
         with:
           node-version: 'lts/*'
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           ref: ${{ inputs.workflows-ref }}
           repository: Jahia/jahia-pack-private
           path: jahia-pack-repo
           token: ${{ secrets.GH_API_TOKEN }}
-      - uses: actions/download-artifact@v3
+      - uses: actions/download-artifact@v4
         with:
-          name: jahia-docker-artifacts
+          name: jahia-pack-docker-artifacts
       - name: Load docker image
         shell: bash
         run: |
@@ -319,13 +319,13 @@ jobs:
           incident_google_client_email: ${{ secrets.INCIDENT_GOOGLE_CLIENT_EMAIL }}
           incident_google_api_key_base64: ${{ secrets.INCIDENT_GOOGLE_PRIVATE_KEY_BASE64 }}
           zencrepes_secret: ${{ secrets.ZENCREPES_WEBHOOK_SECRET }}
-          build_artifacts: jahia-docker-artifacts
+          build_artifacts: jahia-pack-docker-artifacts
 
   sonar:
     runs-on: ubuntu-latest
     needs: [ vars, build ]
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           ref: ${{ inputs.workflows-ref }}
           repository: Jahia/jahia-pack-private
@@ -335,7 +335,7 @@ jobs:
         id: branch-name
         uses: tj-actions/branch-names@v6
       - name: Save/Restore build artifacts from cache
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           key: run-${{ github.run_id }}
           path: |
