--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -340,7 +340,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>tools</artifactId>
-            <version>4.5.0-SNAPSHOT</version>
+            <version>4.5.0</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
