--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -303,7 +303,7 @@
             <!-- New Vanity URL dashboard -->
             <groupId>org.jahia.modules</groupId>
             <artifactId>site-settings-seo</artifactId>
-            <version>4.4.0</version>
+            <version>4.5.0-SNAPSHOT</version>
             <type>jar</type>
             <scope>runtime</scope>
         </dependency>
