--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -80,7 +80,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>assets</artifactId>
-            <version>8.1.0</version>
+            <version>8.2.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -146,7 +146,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>default</artifactId>
-            <version>8.7.0</version>
+            <version>8.8.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
