--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -164,13 +164,13 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>external-provider</artifactId>
-            <version>4.7.0</version>
+            <version>4.8.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>external-provider-modules</artifactId>
-            <version>4.7.0</version>
+            <version>4.8.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
