--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -340,7 +340,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>server-availability-manager</artifactId>
-            <version>3.2.0-SNAPSHOT</version>
+            <version>3.2.0</version>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
