--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -85,7 +85,7 @@
         <dependency>
             <groupId>org.jahia.modules.npm</groupId>
             <artifactId>luxe-jahia-demo</artifactId>
-            <version>0.3.0-SNAPSHOT</version>
+            <version>0.3.0</version>
             <type>tgz</type>
         </dependency>
         <dependency>
