--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -345,7 +345,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>npm-modules-engine</artifactId>
-            <version>0.3.0</version>
+            <version>0.4.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
