--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -98,13 +98,13 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>jahia-ui-root</artifactId>
-            <version>1.10.0-SNAPSHOT</version>
+            <version>1.10.0</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>jahia-administration</artifactId>
-            <version>1.8.1-SNAPSHOT</version>
+            <version>1.10.0</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -116,13 +116,13 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>jahia-page-composer</artifactId>
-            <version>1.12.0-SNAPSHOT</version>
+            <version>1.12.0</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>jahia-dashboard</artifactId>
-            <version>1.10.0-SNAPSHOT</version>
+            <version>1.10.0</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -152,7 +152,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>content-editor</artifactId>
-            <version>3.7.0-SNAPSHOT</version>
+            <version>3.7.0</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -217,7 +217,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>graphql-dxm-provider</artifactId>
-            <version>2.21.0-SNAPSHOT</version>
+            <version>2.21.0</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
