--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -152,7 +152,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>app-shell</artifactId>
-            <version>3.1.0</version>
+            <version>3.2.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
