--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -92,13 +92,13 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>jahia-ui-root</artifactId>
-            <version>1.10.0-SNAPSHOT</version>
+            <version>1.10.0</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>jahia-administration</artifactId>
-            <version>1.10.0-SNAPSHOT</version>
+            <version>1.10.0</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -110,13 +110,13 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>jahia-page-composer</artifactId>
-            <version>1.12.0-SNAPSHOT</version>
+            <version>1.12.0</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>jahia-dashboard</artifactId>
-            <version>1.10.0-SNAPSHOT</version>
+            <version>1.10.0</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -152,7 +152,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>app-shell</artifactId>
-            <version>3.2.0-SNAPSHOT</version>
+            <version>3.2.0</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
