--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -284,7 +284,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>serverSettings</artifactId>
-            <version>9.7.2-SNAPSHOT</version>
+            <version>9.7.2</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
